// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/orca.proto


export interface OrcaSwapAccountsProto {
  'tokenProgram'?: (string);
  'tokenAuthority'?: (string);
  'whirlpool'?: (string);
  'tokenOwnerAccountA'?: (string);
  'tokenVaultA'?: (string);
  'tokenOwnerAccountB'?: (string);
  'tokenVaultB'?: (string);
  'tickArray0'?: (string);
  'tickArray1'?: (string);
  'tickArray2'?: (string);
  'oracle'?: (string);
}

export interface OrcaSwapAccountsProto__Output {
  'tokenProgram': (string);
  'tokenAuthority': (string);
  'whirlpool': (string);
  'tokenOwnerAccountA': (string);
  'tokenVaultA': (string);
  'tokenOwnerAccountB': (string);
  'tokenVaultB': (string);
  'tickArray0': (string);
  'tickArray1': (string);
  'tickArray2': (string);
  'oracle': (string);
}
