// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/orca.proto


export interface OrcaSwapV2AccountsProto {
  'tokenProgramA'?: (string);
  'tokenProgramB'?: (string);
  'memoProgram'?: (string);
  'tokenAuthority'?: (string);
  'whirlpool'?: (string);
  'tokenMintA'?: (string);
  'tokenMintB'?: (string);
  'tokenOwnerAccountA'?: (string);
  'tokenVaultA'?: (string);
  'tokenOwnerAccountB'?: (string);
  'tokenVaultB'?: (string);
  'tickArray0'?: (string);
  'tickArray1'?: (string);
  'tickArray2'?: (string);
  'oracle'?: (string);
}

export interface OrcaSwapV2AccountsProto__Output {
  'tokenProgramA': (string);
  'tokenProgramB': (string);
  'memoProgram': (string);
  'tokenAuthority': (string);
  'whirlpool': (string);
  'tokenMintA': (string);
  'tokenMintB': (string);
  'tokenOwnerAccountA': (string);
  'tokenVaultA': (string);
  'tokenOwnerAccountB': (string);
  'tokenVaultB': (string);
  'tickArray0': (string);
  'tickArray1': (string);
  'tickArray2': (string);
  'oracle': (string);
}
