// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/orca.proto


export interface WhirlpoolRewardInfoProto {
  'mint'?: (string);
  'vault'?: (string);
  'authority'?: (string);
  'emissionsPerSecondX64'?: (string);
  'growthGlobalX64'?: (string);
}

export interface WhirlpoolRewardInfoProto__Output {
  'mint': (string);
  'vault': (string);
  'authority': (string);
  'emissionsPerSecondX64': (string);
  'growthGlobalX64': (string);
}
